labels component work

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -3,9 +3,10 @@
 }
 
 .navbar-default {
-    background-image: -webkit-linear-gradient(top, #ffffff 0%, #f8f8f8 100%);
-    background-image: -o-linear-gradient(top, #ffffff 0%, #f8f8f8 100%);
-    background-image: linear-gradient(to bottom, #ffffff 0%, #f8f8f8 100%);
+    background: #ddd;
+    // background-image: -webkit-linear-gradient(top, #ffffff 0%, #f8f8f8 100%);
+    // background-image: -o-linear-gradient(top, #ffffff 0%, #f8f8f8 100%);
+    // background-image: linear-gradient(to bottom, #ffffff 0%, #f8f8f8 100%);
     background-repeat: repeat-x;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff8f8f8', GradientType=0);
     filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
@@ -82,6 +83,7 @@
     font-size: 18px;
     line-height: 20px;
     height: 20px;
+    text-decoration: none;
 }
 
 .navbar-default .navbar-toggle {
