--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,31 +1,58 @@
 @import "variables";
-// @import 'defaults';
 
 html, body {
-  height: 100%;
-  margin:0px;
-  font-family: 'Avenir', Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: #2c3e50;
-  font-size: 14px;
-  line-height: 1.42857143;
-  background-color: #fff;
+    height: 100%;
+    overflow: hidden;
+    margin: 0px;
+    font-family: 'Avenir', Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: #2c3e50;
+    font-size: 14px;
+    line-height: 1.42857143;
+    background-color: #fff;
+}
+
+body {
+    background: #eee;
 }
 
 .app {
-  min-height: 100%;
+    background: #fff;
+    border: #aaa 1px solid;
+    width: 70%;
+    // min-height: 100%;
+    margin-left: 15%;
+    margin-top: 32px;
+    padding: 32px;
+    box-sizing: border-box;
+    -webkit-box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.25);
 }
 
 .router-view {
-  transition: all .5s ease;
-  min-height: 100vh;
-  padding: 20px;
+    transition: all .5s ease;
+    min-height: 66vh;
+    padding: 20px;
 }
 
 .router-enter, .router-leave {
-  opacity: 0;
-  transform: translate3d(20px, 0, 0);
+    opacity: 0;
+    transform: translate3d(10px, 0, 0);
+}
+
+.view {
+    position: relative;
+    top: -32px;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
+.list-style-none {
+    list-style: none;
 }
 
 // --------------
