--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,7 @@
 @import "styles/global";
 
 * {
+    user-select: none;
     -webkit-user-select: none; /* webkit (safari, chrome) browsers */
     -moz-user-select: none; /* mozilla browsers */
     -khtml-user-select: none; /* webkit (konqueror) browsers */
