--- a/src/style.scss
+++ b/src/style.scss
@@ -8,3 +8,10 @@
     -khtml-user-select: none; /* webkit (konqueror) browsers */
     -ms-user-select: none; /* IE10+ */
 }
+
+.toolbar--dense{
+    .input-group.input-group--solo{
+        min-height: 35px;
+        height: 35px;
+    }
+}
